--- a/snooty.toml
+++ b/snooty.toml
@@ -152,6 +152,7 @@ reference-compatibility-mongodb-swift = ":driver:`MongoDB compatibility matrix <
 ios-store = "https://apps.apple.com/us/app/"
 play-store = "https://play.google.com/store/apps/"
 vault = "`HashiCorp Vault <https://www.vaultproject.io/>`__"
+waf = "`Atlas Well-Architected Framework <https://www.mongodb.com/>`__"
 wif = "Workforce Identity Federation"
 workload = "Workload Identity Federation"
 
